--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4 { letter-spacing:-0.05rem; }
 h1 a, h2 a, h3 a, h4 a { font-size: 1.0em; }
 
 a { color:#008EBD; text-decoration:none; }
-a:visited {color:#046282;}
+a:visited {color:#008EBD;}
 a:hover { text-decoration:underline;}
 
 h1 { font-size:2.0rem; }
@@ -26,9 +26,23 @@ p.error { background:#FF6E6E}
 
 body { }
 body > header { position:relative; line-height:4.0rem; }
-body > header { display:flex; flex-flow:row nowrap; align-items:center; align-content:center; justify-content: space-between;}
+body > header { display:flex; flex-flow:row nowrap; align-items:center; justify-content: space-between;}
 body > footer { position:absolute; bottom:0; left:0; right:0; line-height:4.0rem; }
 body > header, body > footer { padding:0 1.0rem; background:whitesmoke }
+body > header > .menu { flex:2.5rem 0 0;}
+body > header > .button { flex:4.0rem 0 0; text-align:center;}
+body > header > h1 { flex:1 1 auto;}
+
+body > header > .menu { cursor:pointer; position: relative; min-height:3.0rem; color:#008EBD; transition:color .2s ease-in-out; margin-right:1rem; }
+body > header > .menu:before { content:''; border-radius:.2rem; display:block; border-top:.4rem solid; border-bottom:.4rem solid; height:1.2rem; vertical-align:middle; margin:.6rem 0; position: relative;z-index: 100;}
+body > header > .menu:after { content:''; border-radius:.2rem; display:block; position:absolute; top:50%; left:0; right:0; border-top:.4rem solid; margin-top:-.2rem; vertical-align:middle;z-index: 100;}
+body > header > .menu ul { display:none; border: .1rem solid lightgray; background:white; position:absolute; top: 100%; z-index:99;  padding:1.0rem; list-style:none;left: -.6rem;border-radius: .3rem;min-width: 8.0rem;}
+body > header > .menu ul:before { content:''; position:absolute; left: -.1rem; top: -3.5rem; width: 3.5rem; border-top-left-radius:.5rem; border-top-right-radius:.5rem; background:white;height: 3.5rem;border: .1rem solid lightgray;border-bottom: none;}
+body > header > .menu ul li { border-left: .2rem solid transparent; padding-left:.5rem; text-decoration:none; line-height: 2.0rem;}
+body > header > .menu ul li.active { border-left-color:#008EBD;}
+body > header > .menu:hover { color:#14AFE2; }
+body > header > .menu:hover ul { display:block; }
+
 
 table { border-collapse:collapse; width:100%; }
 table tr { border-top:.1rem solid lightgray;}
@@ -56,4 +70,5 @@ label {display:block; font-size:1.1rem; font-weight:bold;}
 input{ appearance:none; border:.1rem solid #ccc; line-height:2.5rem; text-indent:1.0rem; font-size:1.1rem; width:100%;}
 .field-error input {border-color:#FF6E6E}
 .field-error .field-error-messages {display:block; font-size:1.0rem; padding:0.5rem;}
+
 
