--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -72,7 +72,9 @@ form.inline { display:inline-block; }
 
 fieldset { padding:1.0rem; border:none; }
 label {display:block; font-size:1.1rem; font-weight:bold;}
-input{ appearance:none; border:.1rem solid #ccc; line-height:2.5rem; text-indent:1.0rem; font-size:1.1rem; width:100%;}
+input, select { display:inline-block; background:white; border-radius:.3rem; border:.1rem solid #ccc; text-indent:1.0rem; font-size:1.1rem; vertical-align:middle; }
+input { line-height:2.8rem;  width:100%; }
+select { height:3.2rem; min-width:8.0rem;}
 .field-error input {border-color:#FF6E6E}
 .field-error .field-error-messages {display:block; font-size:1.0rem; padding:0.5rem;}
 
